--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,15 @@
   </head>
   <body>
     <section class="section">
-      <h1 class="title"><img width="40" src="JD-15-512.png"/> Herbert</h1>
-      <h2 class="subtitle">Growing Cannabis</h2>
+      <div>
+	<div>
+	  <img width="40" src="JD-15-512.png"/>
+	</div>
+	<div>
+	  <h1 class="title">Herbert</h1>
+	  <h2 class="subtitle">Grow More</h2>
+	</div>
+      </div>
     </section>
     <section class="section">
       <div class="columns">
@@ -65,6 +72,20 @@
           return n;
       }
 
+      function createStatus(name, state) {
+	  const status = document.createElement('div');
+
+	  let mod = 'is-warning';
+	  if (state === true) {
+	      mod = 'is-success';
+	  }
+
+	  status.setAttribute('class', 'button ' + mod);
+	  status.appendChild(document.createTextNode(name));
+
+	  return status;
+      }
+
       function createReadout(icon, name, text) {
           const readout = document.createElement('div');
           const span = document.createElement('span');
@@ -94,6 +115,21 @@
           title.appendChild(document.createTextNode(data.id));
 
           display.appendChild(title);
+
+	  const blower = createStatus('blower', data.blower);
+	  display.appendChild(blower);
+
+	  const dehumidifier = createStatus('dehumidifier', data.dehumidifier);
+	  display.appendChild(dehumidifier);
+
+	  const heater = createStatus('heater', data.heater);
+	  display.appendChild(heater);
+
+	  const humidifier = createStatus('humidifier', data.humidifier);
+	  display.appendChild(humidifier);
+
+	  const lamp = createStatus('lamp', data.lamp);
+	  display.appendChild(lamp);
 
           const temp = createReadout('thermometer-half', data.id+'-temp', '°C');
           display.appendChild(temp);
@@ -130,7 +166,7 @@
               const data = JSON.parse(event.data);
 
               let display = document.querySelector('#' + data.id);
-              if (data.started_at !== null && display === null) {
+              if (display === null) {
 		  display = createDisplay(data);
 		  document.querySelector('#displays').appendChild(display);
 
@@ -146,16 +182,14 @@
 		  bindValue(htext, clime[1], 0);
               }
 
-	      if (display) {
-		  const clime = climes.get(data.id);
+	      const clime = climes.get(data.id);
 
-		  clime[0](data.temperature);
-		  clime[1](100*data.humidity);
+	      clime[0](data.temperature);
+	      clime[1](100*data.humidity);
 
-		  const ping = createPing(data);
-		  const pings = document.querySelector('#pings');
-		  pings.insertBefore(ping, pings.childNodes[0]);
-	      }
+	      const ping = createPing(data);
+	      const pings = document.querySelector('#pings');
+	      pings.insertBefore(ping, pings.childNodes[0]);
 	  }
 
 	  ws.onclose = () => {
