--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="./favicon.ico" />
   <title>Hello Herbert!</title>
   <style>
     .display {
@@ -48,7 +49,7 @@
           </div>
         </div>
         <div class="column is-hidden">
-	  <form class="control">
+	        <form class="control">
             <label class="radio">
               <input type="radio" name="units" onclick="setUnits('C')" checked>
               Celsius
@@ -57,7 +58,7 @@
               <input type="radio" name="units" onclick="setUnits('F')">
               Fahrenheit
             </label>
-	  </form>
+	        </form>
           <h4 class="is-italic">Pings</h4>
           <ul id="pings"></ul>
         </div>
